[gd_scene load_steps=2 format=3 uid="uid://dqr8xm1h0u50d"]

[ext_resource type="Script" uid="uid://dl61xon8dgeu2" path="res://scripts/ui/battle_scene_ui.gd" id="1_battle"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopHUD" type="HBoxContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0

[node name="Player1Info" type="VBoxContainer" parent="UI/TopHUD"]
layout_mode = 2
size_flags_horizontal = 3

[node name="P1Name" type="Label" parent="UI/TopHUD/Player1Info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Fighter 1"

[node name="P1Health" type="ProgressBar" parent="UI/TopHUD/Player1Info"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="CenterInfo" type="VBoxContainer" parent="UI/TopHUD"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Timer" type="Label" parent="UI/TopHUD/CenterInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "99"
horizontal_alignment = 1

[node name="Round" type="Label" parent="UI/TopHUD/CenterInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Round 1"
horizontal_alignment = 1

[node name="Player2Info" type="VBoxContainer" parent="UI/TopHUD"]
layout_mode = 2
size_flags_horizontal = 3

[node name="P2Name" type="Label" parent="UI/TopHUD/Player2Info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Fighter 2"
horizontal_alignment = 2

[node name="P2Health" type="ProgressBar" parent="UI/TopHUD/Player2Info"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="BottomHUD" type="HBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0

[node name="ControlsInfo" type="Label" parent="UI/BottomHUD"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "WASD: Move | Space: Attack | Esc: Menu"

[node name="BackButton" type="Button" parent="UI/BottomHUD"]
unique_name_in_owner = true
layout_mode = 2
text = "Back to Menu"

[node name="BattleArea" type="Node2D" parent="."]

[node name="StageBackground" type="Sprite2D" parent="BattleArea"]
unique_name_in_owner = true
position = Vector2(640, 360)

[node name="Fighter1Spawn" type="Marker2D" parent="BattleArea"]
unique_name_in_owner = true
position = Vector2(300, 500)

[node name="Fighter2Spawn" type="Marker2D" parent="BattleArea"]
unique_name_in_owner = true
position = Vector2(980, 500)

[node name="Camera2D" type="Camera2D" parent="BattleArea"]
position = Vector2(640, 360)
zoom = Vector2(0.8, 0.8)
